@@ -218,9 +218,9 @@ if ($output !== false && $output != '') {
 
 	ob_start();
 
-    $graph_data_array['get_error'] = true;
+	$graph_data_array['get_error'] = true;
 
-    rrdtool_function_graph(get_request_var('local_graph_id'), $rra_id, $graph_data_array);
+	rrdtool_function_graph(get_request_var('local_graph_id'), $rra_id, $graph_data_array);
 
 	$error = ob_get_contents();
 
@@ -260,5 +260,8 @@ if ($output !== false && $output != '') {
 }
 
 header('Content-Type: application/json');
-print json_encode($oarray);
+$json = json_encode($oarray);
+header('Content-Length: ' . strlen($json));
+print $json;
+
 
