@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 1.1.35
 -issue#993: Realtime not working on remote pollers for certain data query
+-issue#1286: Correct CHUNKED_ENCODING error when retrieving graph with some browsers
 
 1.1.34
 -issue#1040: PHP version 7.2 - ERROR PHP WARNING: sizeof()
